<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/txtTic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTac"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/archivo_black"
        android:text="@string/tic"
        android:textColor="@color/purple"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txtTac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/archivo_black"
        android:text="@string/tac"
        android:textColor="@color/sky"
        android:textSize="50sp" />
    <TextView
        android:id="@+id/txtToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTac"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/archivo_black"
        android:text="@string/toe"
        android:textSize="40sp"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/developerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="monospace"
        android:text="@string/mohtashim_develops"
        android:textColor="@color/sky"
        android:textSize="15sp"
        android:textStyle="italic" />


</RelativeLayout>