<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:id="@+id/relativeParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoresContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/playerOneLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playerTwoLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/score_background">
            <TextView
                android:id="@+id/XBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/score_background"
                android:text="@string/x"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/xScoreBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/score_background"
                android:text="0"
                android:textColor="@color/red"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerTwoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playerOneLayout"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/score_background">

            <TextView
                android:id="@+id/oBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/score_background"
                android:text="@string/o"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/oScoreBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/score_background"
                android:text="0"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/turnTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playGrid"
        android:layout_below="@id/scoresContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/player_x_turn"
        android:textSize="25sp" />

    <GridLayout
        android:id="@+id/playGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true">

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn1"
           android:layout_width="100dp"
           android:layout_gravity="center"
           android:height="100dp"
           android:text=""
           android:background="@drawable/btn_background"
           android:onClick="checkOnClick"
           android:textSize="40sp" />
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn2"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginStart="5dp"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn3"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginStart="5dp"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn4"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginTop="5dp"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn5"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginTop="5dp"
           android:layout_marginStart="5dp"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn6"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginTop="5dp"
           android:layout_marginStart="5dp"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn7"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginTop="5dp"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn8"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginTop="5dp"
           android:layout_marginStart="5dp"/>
       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btn9"
           android:background="@drawable/btn_background"
           android:height="100dp"
           android:width="100dp"
           android:textSize="40sp"
           android:text=""
           android:layout_gravity="center"
           android:onClick="checkOnClick"
           android:layout_marginTop="5dp"
           android:layout_marginStart="5dp"/>


   </GridLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/exit"
        android:background="@drawable/btn_background"
        android:textSize="18sp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/exitBtn"
        android:layout_marginBottom="20dp"
        android:text="@string/reset"
        android:background="@drawable/btn_background"
        android:textSize="18sp"/>



</RelativeLayout>